src/syntax/parse/snapshots/dilaria__syntax__parse__test__r#loop__break_after_inner.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Loop(
    Block {
        stmts: [
            Loop(
                Block {
                    stmts: [],
                    span: Span(
                        0..0,
                    ),
                },
                Span(
                    0..0,
                ),
            ),
            Break(
                Span(
                    0..0,
                ),
            ),
        ],
        span: Span(
            0..0,
        ),
    },
    Span(
        0..0,
    ),
)
