src/syntax/parse/snapshots/dilaria__syntax__parse__test__r#loop__empty.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Loop(
    Block {
        stmts: [],
        span: Span(
            0..0,
        ),
    },
    Span(
        0..0,
    ),
)
