src/syntax/parse/snapshots/dilaria__syntax__parse__test__r#loop__with_break.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Loop(
    Block {
        stmts: [
            Break(
                Span(
                    0..0,
                ),
            ),
        ],
        span: Span(
            0..0,
        ),
    },
    Span(
        0..0,
    ),
)
